[project]
name = "factorio-progress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pyperclip>=1.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B", "C4", "ERA", "FLY", "INP", "N", "NPY", "PERF", "PL", "PTH", "RUF", "SIM", "T20", "TD", "UP", "YTT", "D"
]
ignore = [
    "PERF203", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "RUF100", "TD003", "D1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["T201"]  # print allowed in test files
"tasks.py" = ["T201"]  # in tasks.py print is used for output

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = []
required-imports = ["from __future__ import annotations"]


[tool.mypy]
python_version = "3.12"
follow_imports = "normal"

# Report formatting
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Strictness
strict = true
warn_unreachable = true
warn_unused_configs = true


[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "pyperclip"
]

[[tool.mypy.overrides]]
module = [
    "datadog.*",
]
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
]
ignore_errors = true
